--- a/1_HTML Basic/5_img.html
+++ b/1_HTML Basic/5_img.html
@@ -8,7 +8,7 @@
 <h2>HTML Images</h2>
 <p>HTML images are defined with the img tag:</p>
 
-<img src="w3schools.jpg" alt="W3Schools.com" width="100" height="140">
+<img src="\w3school\img\w3schools.jpg" alt="W3Schools.com" width="100" height="140">
 
 </body>
 </html>
