--- a/2_HTML Attribute/10_width_height.html
+++ b/2_HTML Attribute/10_width_height.html
@@ -8,7 +8,7 @@
 
 <p>The width and height attributes of the img tag, defines the width and height of the image:</p>
 
-<img src="img/img_girl.jpg" width="500" height="600">
+<img src="\w3school\img\img_girl.jpg" width="500" height="600">
 
 </body>
 </html>
