--- a/2_HTML Attribute/11_alt.html
+++ b/2_HTML Attribute/11_alt.html
@@ -6,6 +6,6 @@
 <body>
     <h2>The alt Attribute</h2>
     <p>The alt attribute should reflect the image content, so users who cannot see the image gets an understanding of what the image contains:</p>
-    <img src="img/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
+    <img src="/w3school/img/img_girl.jpg" alt="Girl with a jacket" width="500" height="600">
 </body>
 </html>
