--- a/7_HTML Quotations and Citations/39_cite.html
+++ b/7_HTML Quotations and Citations/39_cite.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>ccite element------meera</title>
+        <title>cite element------meera</title>
     </head>
 <body>
 
 <p>The HTML cite element defines the title of a work.</p>
 <p>Browsers usually display cite elements in italic.</p>
 
-<img src="img/img_the_scream.jpg" width="220" height="250" alt="The Scream">
+<img src="../img/img_the_scream.jpg" width="220" height="250" alt="The Scream">
 <p><cite>The Scream</cite> by Edvard Munch. Painted in 1893.</p>
 
 </body>
